<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="nome_aplicativo">Aplicativo Lista VIP Curso Android</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="telefone_de_contato">Telefone de Contato</string>
    <string name="finalizar">Finalizar</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
</resources>